--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         });
       }
     </script>
+    <h1>Super pokedex PWA</h1>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
