--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         });
       }
     </script>
-    <h1>Super pokedex PWA</h1>
+    <h1>Super pokedex</h1>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
