--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
+    <link rel="manifest" href="manifest.json">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -19,7 +20,7 @@
         });
       }
     </script>
-    <h1>Super pokedex PWA</h1>
+    <h1>Super pokedex</h1>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
